Fix AnimationTiming calculation regarding active time and phase

Our codes do not match the spec in calculating the animation effect
phases [1] and its active time [2]. This patch updated the current
implementation by spec and fixed the related layout tests.

[1] https://drafts.csswg.org/web-animations/#before-active-boundary-time
[2] https://drafts.csswg.org/web-animations/#calculating-the-active-time

Change-Id: Ia9ccea246835ddd2e2a3970d9279e008de9e699c
Bug: 909785
Reviewed-on: https://chromium-review.googlesource.com/c/1352710
Commit-Queue: Yi Gu <yigu@chromium.org>
Reviewed-by: Stephen McGruer <smcgruer@chromium.org>
Cr-Commit-Position: refs/heads/master@{#613163}
Former-commit-id: 26664074b27343684de423a753e644bd73f1b48a